<resources>
    <string name="app_name">my files</string>
    <string name="root_explorer_ad">"
This is a protected folder that is not accessible with standard file managers on unrooted phones. 

However, if your phone is rooted it can be accessed using our privileged mode file manager which is called Root Explorer. 

Please click on the button below to view Root Explorer in the market."</string>
    <string name="data_folder_desc">The data folder contains data stored by system and third-party apps as well as the installed apps themselves.</string>
    <string name="no_root_message_data">"Your phone doesn't appear to be rooted. This is required in order to gain access to protected files and folders such as this. 

The easiest way to find out how to root your phone is to Google \"root your_phone_name\" and look through the results for an appropriate tutorial."</string>
    <string name="no_root_message_system">"Your phone doesn't appear to be rooted. This is required in order to change or delete protected files such as this. 

The easiest way to find out how to root your phone is to Google \"root your_phone_name\" and look through the results for an appropriate tutorial."</string>
    <string name="sqlite_advert">"This is a SQLite database. You can go ahead and view the database using the built in DB viewer.

However, if you would like to edit the database contents and perform more advanced functions such as record filtering then you could try our new SQLite Editor which is now available from the market."</string>
    <string name="dont_ask_again">"Don't show this again"</string>
    <string name="classes_dex">classes.dex</string>
    <string name="beta_expired">This Beta version has expired.</string>
    <string name="beta_expires_1day">Beta expires in 1 day.</string>
    <string name="beta_expires_2days">Beta expires in 2 days.</string>
    <string name="open_with_help">"
The three tabs next to Help contain actions which can be performed on this file.

The Internal tab contains internal Root Explorer functions such as Text Viewer, SQLite Database Viewer and Zip Viewer.
 
The Generic tab allows you to open the file as a generic type such as Text, Music, Audio or Image.

The Apps tab allows you to select a specific app with which to open the file.
 
Just click on one of these tabs and select the action you wish to use.
 
At the bottom of each list is a check box. Make sure this box is ticked if you want to make this the default action for the file type."</string>
    <string name="used">used</string>
    <string name="free">free</string>
    <string name="read_only_paste">You cannot paste here because the file system is read-only.</string>
    <string name="read_only_move_selected">The selected items cannot be moved because the file system is read-only.</string>
    <string name="read_only_delete_selected">The selected items cannot be deleted because the file system is read-only.</string>
    <string name="restart_app_title">Restart App</string>
    <string name="restart_app_message">"Root Explorer has not yet managed to obtain root access. Because of issues with Superuser, this often happens the first time the app is run but is usually fine from then on.

Click OK and restart the app to try again. Make sure you respond correctly to the Superuser prompt."</string>
    <string name="ok">OK</string>
    <string name="root_failed">"Root access could not be obtained. 

Make sure you granted root permission when requested by SuperUser. If you did then try re-rooting your device. 

Root Explorer will continue in non-root mode."</string>
    <string name="root_failed_su_1">"Root access could not be obtained because su failed with the following message:

"</string>
    <string name="root_failed_su_2">"

Make sure you granted root permission when requested by SuperUser. If you did then try re-rooting your device. 

Root Explorer will continue in non-root mode."</string>
    <string name="root_failed_title">Root Access Failed</string>
    <string name="search_cancelled">Search cancelled</string>
    <string name="market_problem">These was a problem displaying the Android Market. Please try again.</string>
    <string name="zip_no_sd">SD card is not mounted. Zip operation aborted.</string>
    <string name="zip_name">Zip name</string>
    <string name="create_zip">Create Zip</string>
    <string name="zip_no_name">No name entered. Zip not created</string>
    <string name="cancel">Cancel</string>
    <string name="tar_no_sd">SD card is not mounted. Tar operation aborted.</string>
    <string name="tar_name_title">Tar name</string>
    <string name="create_tar">Create Tar</string>
    <string name="tar_compression">Tar Compression</string>
    <string name="tar_what_compression">What compression would you like applied to this tar archive?</string>
    <string name="no_compression">No compression</string>
    <string name="tar_no_name">No name entered. Tar not created</string>
    <string name="paste">Paste</string>
    <string name="no_items_selected">No items selected</string>
    <string name="search_results_title">Search results</string>
    <string name="no_sd_card">The SD card is not currently mounted</string>
    <string name="warning_title">Warning</string>
    <string name="path_not_found">does not exist. Displaying first existing parent folder instead.</string>
    <string name="paste_failure_title">Paste Failure</string>
    <string name="paste_failure_msg1">There was not enough free disk space to complete the paste operation.</string>
    <string name="paste_failure_msg2">"There was not enough free disk space to complete the paste operation. 

Please note that the free space displayed by Root Explorer (as reported by linux) is not always 100% accurate!"</string>
    <string name="link_failure_title">Link failure</string>
    <string name="link_failure_msg1">"The link operation failed with the following message: 

\""</string>
    <string name="link_failure_msg2">This may be because the target file system does not support symbolic links. Most SD cards do NOT support links.</string>
    <string name="app_cant_open_file">The associated app could not open this file.</string>
    <string name="no_associated_app">No application was found capable of opening this type of file.</string>
    <string name="file_not_readable">This file is not readable by non-root apps. Copy to SD card first if you want to select it.</string>
    <string name="package_installer_title">Package Installer</string>
    <string name="package_installer_msg">This is a package installer. What action would you like to perform?</string>
    <string name="install">Install</string>
    <string name="view">View</string>
    <string name="script_file_title">Script file</string>
    <string name="script_file_msg">This is an executable script file. What action would you like to perform?</string>
    <string name="execute">Execute</string>
    <string name="zip_cancelled">Zip cancelled</string>
    <string name="tar_cancelled">Tar cancelled</string>
    <string name="chown_worked">Owner/Group changed successfully</string>
    <string name="chown_failed">Owner/Group change was not successful. Please note that some file systems (e.g. SD card) do not allow owner/group changes.</string>
    <string name="chmod_worked">Permissions changed successfully</string>
    <string name="chmod_failed">Permissions change was not successful. Please note that some file systems (e.g. SD card) do not allow permission changes.</string>
    <string name="extract">Extract</string>
    <string name="open_with">Open With</string>
    <string name="extract_all">Extract All</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
    <string name="copy_noun">Copy</string>
    <string name="move">Move</string>
    <string name="permissions">Permissions</string>
    <string name="properties">Properties</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="send">Send</string>
    <string name="view_as_text">View as text</string>
    <string name="open_in_text_editor">Open in Text Editor</string>
    <string name="zip_this_folder">Zip this folder</string>
    <string name="set_as_home">Set as Home folder</string>
    <string name="zip_this_file">Zip this file</string>
    <string name="change_owner">Change owner</string>
    <string name="link_to_folder">Link to this folder</string>
    <string name="link_to_file">Link to this file</string>
    <string name="read_only_edit">You cannot edit this file because the file system is read-only.</string>
    <string name="read_only_delete">cannot be deleted because the file system is read-only.</string>
    <string name="read_only_rename">cannot be renamed because the file system is read-only.</string>
    <string name="read_only_move">cannot be moved because the file system is read-only.</string>
    <string name="create_link">Create Link</string>
    <string name="read_only_permissions">permissions cannot be changed because the file system is read-only.</string>
    <string name="read_only_chown">owner cannot be changed because the file system is read-only.</string>
    <string name="gzip">Gzip</string>
    <string name="completed">Completed</string>
    <string name="completed_msg1">was created in folder</string>
    <string name="completed_msg2">Hit \"Go to zip\" to go to that folder or hit \"Stay\" to stay in the current folder.</string>
    <string name="completed_msg3">Hit \"Go to tar\" to go to that folder or hit \"Stay\" to stay in the current folder.</string>
    <string name="stay">Stay</string>
    <string name="error">Error</string>
    <string name="go_to_zip">Go to zip</string>
    <string name="go_to_tar">Go to tar</string>
    <string name="zip_failed">Zip creation failed due to the following error condition:</string>
    <string name="tar_failed">Tar creation failed due to the following error condition:</string>
    <string name="please_wait">Please wait...</string>
    <string name="extracting_msg">Extracting archive to</string>
    <string name="extracting_file_msg">Extracting file to</string>
    <string name="home_set_to">Home set to</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="file">file</string>
    <string name="folder">folder</string>
    <string name="delete_in_progress">Delete in progress...</string>
    <string name="delete_file_prompt">Are you sure you want to delete this file?</string>
    <string name="delete_folder_prompt">Are you sure you want to delete this folder?</string>
    <string name="yes">Yes</string>
    <string name="deleted">deleted</string>
    <string name="delete_failed">Delete failed</string>
    <string name="no">No</string>
    <string name="multi_delete_title">Multi-delete</string>
    <string name="multi_delete_prompt">Are you sure you want to delete the selected items?</string>
    <string name="view_prefs">View Preferences</string>
    <string name="choose_view">Choose View Mode</string>
    <string name="choose_sort">Choose Sort Order</string>
    <string name="folders_first_title">List folders first</string>
    <string name="show_hidden">Show hidden files</string>
    <string name="show_thumbs">Show image thumbnails</string>
    <string name="show_friendly">Show friendly file sizes</string>
    <string name="info_mode">Info bar mode</string>
    <string name="view_mode">View mode</string>
    <string name="sort_order">Sort order</string>
    <string name="info_mode2">Choose Info Bar Mode</string>
    <string name="archive_prefs">Archive Preferences</string>
    <string name="zip_folder">Zip/Tar create folder</string>
    <string name="extract_folder">Archive extract folder</string>
    <string name="general_prefs">General Preferences</string>
    <string name="home_folder">Home folder</string>
</resources>